Add enhancements and proper documentations